# tacodns

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  config.example.yml  config.example2.yml  config.ref.yml  docker-compose.yml
src/: config.rs  main.rs  options.rs  protocol.rs  regex.rs
src/config/: mod.rs  ttl.rs  yaml_utils.rs
src/server/: mod.rs  protocol.rs
