[package]
name = "tacodns"
version = "0.1.0"
authors = ["chris13524 <chris@hichris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
byteorder = "1.3.2"
yaml-rust = "0.4.3"
regex = "1.3.1"
threadpool = "1.7.1"
resolv-conf = "0.6.2"
nom = "5.0.1"
lazy_static = "1.4.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
serde = { version = "1.0.102", features = ["derive"] }
